AD-89:Fixed alignment issue for random ads

--- a/src/sass/wpadcenter-public.scss
+++ b/src/sass/wpadcenter-public.scss
@@ -51,9 +51,10 @@
 	display: block;
   }
   
-  .wpadcenter-adgroup-widget-container {
+  .wpadcenter-adgroup-widget-container, .wpadcenter-randomad-widget-container {
 	overflow: hidden;
   }
+
 
 /*Gutenberg block css*/
 .wpadcenter-maxwidth-top,.wpadcenter-maxwidth-bottom,.wpadcenter-order-container{
